--- a/AdmissionPortalCreator/Views/Form/CreateEdit.cshtml
+++ b/AdmissionPortalCreator/Views/Form/CreateEdit.cshtml
@@ -49,7 +49,7 @@
     <br />
     <div class="d-flex gap-2">
         <button type="submit" class="btn btn-success">Save Form</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
 
