--- a/AdmissionPortalCreator/Views/FormSubmission/SubmissionSuccess.cshtml
+++ b/AdmissionPortalCreator/Views/FormSubmission/SubmissionSuccess.cshtml
@@ -25,14 +25,13 @@
                     </p>
                     <div class="d-flex justify-content-center gap-3">
                         <a asp-action="ViewSubmission" asp-route-submissionId="@Model.SubmissionId" class="btn btn-primary">
-                            View My Submission
+                            <i class="bi bi-eye"></i> View My Submission
                         </a>
-                        <a asp-action="MySubmissions" class="btn btn-outline-secondary">
-                            All My Submissions
-                        </a>
-                        <a asp-action="Index" asp-controller="Home" class="btn btn-outline-secondary">
-                            Back to Home
-                        </a>
+                        
+                            <a asp-controller="StudentDashboard" asp-action="Dashboard" class="btn btn-outline-secondary">
+                                <i class="bi bi-house"></i> Back to Dashboard
+                            </a>
+                       
                     </div>
                 </div>
             </div>
