--- a/AdmissionPortalCreator/Views/FormSubmission/ApplyForm.cshtml
+++ b/AdmissionPortalCreator/Views/FormSubmission/ApplyForm.cshtml
@@ -148,7 +148,7 @@
                         </button>
                         @if (User.IsInRole("Student"))
                         {
-                            <a asp-controller="Student" asp-action="Dashboard" class="btn btn-secondary btn-lg px-5 ms-2">
+                            <a asp-controller="StudentDashboard" asp-action="Dashboard" class="btn btn-secondary btn-lg px-5 ms-2">
                                 Cancel
                             </a>
                         }
